<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/soccer1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_A"
                android:textColor="#FFEB3B"
                android:textColorHighlight="#00570707"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/tvShowCount1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_count_initial_value1"
                android:textSize="40sp"
                android:textColor="#FFEB3B"
                android:textColorHighlight="#00570707"
                app:layout_constraintBottom_toTopOf="@id/button1"
                android:textStyle="bold|italic"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="countUp"
                android:text="@string/btn_text_click_me1"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">
        </View>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9800"
                android:text="@string/Team_B"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvShowCount2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_count_initial_value2"
                android:textSize="40sp"
                android:textColor="#FFEB3B"
                android:textColorHighlight="#00570707"
                app:layout_constraintBottom_toTopOf="@id/button2"
                android:textStyle="bold|italic"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="countUp"
                android:text="@string/btn_text_click_me2"
                app:layout_constraintTop_toTopOf="@id/tvShowCount2" />


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>